2010-09-09  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Modify load method of MiniBrowser's BrowserView class
        https://bugs.webkit.org/show_bug.cgi?id=45442

        Modify load method to take a QString as argument, remove unnecessary QT_VERSION_CHECK.

        * MiniBrowser/qt/BrowserView.cpp:
        (BrowserView::load):
        * MiniBrowser/qt/BrowserView.h:
        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::load):

2010-09-09  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        fix show_results in new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=45413

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2010-09-08  Victor Wang  <victorw@chromium.org>

        Reviewed by Ojan Vafai.

        [Chromium] Fix test results server to make sure
        it does not have corrupted data.

        results.json file size coulbe be >1M and we split
        the data into multiple data store entries in this
        case. This patch fixes the issue that the data may
        be corrupted if data store error happens in the middle
        of saving multiple entries.

        https://bugs.webkit.org/show_bug.cgi?id=45063

        * TestResultServer/model/datastorefile.py:

2010-09-08  Peter Varga  <pvarga@inf.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        Fix ignoring return value warning in case of gcc 4.4.4
        https://bugs.webkit.org/show_bug.cgi?id=45384

        * DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
        (testPostURLFile):
        If fwrite have written zero byte then the testPostURLFile function
        returns with false as tempFile can't be opened.
        * DumpRenderTree/qt/ImageDiff.cpp:
        (main):
        Put fwrite function into an if condition without body to avoid
        warning. It is safe because this function writes to the stdout.

2010-09-08  Satish Sampath  <satish@chromium.org>
